gmail/style.css
/* ... */
html.simpl.readingPane:not(.noSplitPane) .G-atb[gh='tm'] > div.G6::before {
  content: '»';
  width: 30px;
  height: 30px;
  background: white;
  display: block;
  position: absolute;
  right: 30px;
  top: 0px;
  z-index: 1;
  border-radius: 16px;
  box-shadow: 0 1px 1px #aaa;
  line-height: 1.2;
  text-align: center;
  font-size: 24px;
  font-family: Arial, sans-serif;
  color: #4185f4;
  border: 1px solid #eee;
  letter-spacing: -2px;
  pointer-events: auto;
  cursor: pointer;
}
*/

/* Move search refinement bar over when nav and add-ons are open */
/* TODO: set left to be dynamic when nav is closed below 1278px so it stays with the content */
@media only screen and (max-width: 960.98px) {
  html.simpl div[gh="tm"] div[role="toolbar"] {
    left: -36px;
  }
}
@media only screen and (max-width: 1278.98px) {
  html.simpl.navOpen div[gh="tm"] div[role="toolbar"] {
    left: 205px;
  }
}
@media only screen and (max-width: 1638.98px) {
  html.simpl.navOpen.readingPane:not(.noSplitPane)
    div[gh="tm"]
    div[role="toolbar"],
  html.simpl.navOpen.readingPane:not(.noSplitPane) div[gh="tm"] div.G6 {
    left: 205px;
    max-width: calc(100vw - 266px);
  }
  html.simpl.navOpen.addOnsOpen div[gh="tm"] div[role="toolbar"],
  html.simpl.navOpen.addOnsOpen div[gh="tm"] div.G6 {
    left: 205px;
    max-width: calc(100vw - 566px);
  }
  html.simpl.navOpen.addOnsOpen.noSplitPane
    div.G-atb[gh="tm"]
    div[role="toolbar"],
  html.simpl.navOpen.addOnsOpen.noSplitPane div.G-atb[gh="tm"] div.G6 {
    left: 185px;
    max-width: calc(100vw - 566px);
  }
}
@media only screen and (min-width: 1638.98px) {
  html.simpl.navOpen.readingPane:not(.noSplitPane) div[gh="tm"] div.G6 {
    left: 205px;
  }
}

/* Hide search refinement bar when you scroll */
/* .aeI is added to a parent Div when you are scrolled to the top */
/* but not for Reading Pane = Vertical|Horizontal */
html.simpl .aeI .aeH div.G-atb[gh="tm"] div[role="toolbar"],
html.simpl .aeI .aeF div.G-atb[gh="tm"] div[role="toolbar"] {
  display: none;
}

/* Move action bar into correct spot */
/* Maybe add .inSearch for not reading pane? */
html.simpl .aeH div[gh="tm"] div[role="toolbar"] + .aqK {
  margin-top: 22px;
}
/* Reading pane */
html.simpl.readingPane.inSearch .G-atb[gh="tm"] > div.G6 ~ div.aqK,
html.simpl.readingPane.inSearch
  .G-atb[gh="tm"]
  > div[role="toolbar"]
  ~ div.aqK {
  margin-top: 14px;
}

/* Create more space above the results for the search chips in Reading pane */
/* TODO not sure if .PY only is added when the search chips are present or if it is a stable classname */
html.simpl.noSplitPane.inSearch .aeF .G-atb.PY ~ .UI .ae4 {
  padding-top: 20px;
}
html.simpl.readingPane.inSearch:not(.noSplitPane) .aeF .G-atb.PY ~ .UI .ae4 {
  padding-top: 70px;
}

/* Make space for the Did you mean bar when it comes up */
html.simpl.inSearch .Wz {
  margin-top: 70px;
  margin-bottom: -50px;
}
html.simpl.inSearch.noSplitPane .Wz {
  margin-top: 70px;
  margin-bottom: -50px;
  max-width: var(--content-width);
  margin-left: auto;
  margin-right: auto;
}
html.simpl.inSearch.readingPane:not(.noSplitPane) .Wz {
  max-width: var(--readingPane-width);
}

/* Keep the action bar from covering the left nav */
html.simpl.readingPane.inSearch .G-atb[gh="tm"] {
  height: 54px;
}

/* Shift message list down to make space for search chips */
html.simpl.inSearch .aeF div[role="main"] > .bX,
html.simpl.inSearch .aeF div[role="main"] > .afn + .ae4 {
  margin-top: 72px;
}

/* Hide Advanced search link */
html.simpl
  div.G-atb[gh="tm"]
  div[role="toolbar"]
  div[data-impression-suffix="ADVANCED_SEARCH_LINK"],
html.simpl
  .aeH
  div[gh="tm"]
  div[role="toolbar"]
  div:first-child
  > div[role="button"]:last-child {
  display: none;
}

/* ====================================================================
 * NAV & COMPOSE BUTTON
 */

/* SHOW NAV ON HOVER */
/* This is buggy b/c the animation is not instant and flipping between positions is */
html.simpl .bhZ:not(.bym) div[role="navigation"] {
  /* display: none; */
}
html.simpl .bhZ.bym {
  /* position: absolute; */
}

/* Don't show the nav when hovering over the compose button
 * TODO: fix this, probably by adding a class on hover of the compose button
 */
html.simpl .bym {
  box-shadow: none !important;
}
html.simpl .bhZ div[role="complementary"],
html.simpl .bhZ div[gh="ns"] {
  display: none !important;
}

/* Hide nav when minimized or in Settings */
html.simpl .bhZ,
html.simpl.inSettings .aeN {
  position: relative;
  z-index: 3 !important;

  /* Remove this to show nav on hover */
  max-width: 0px !important;
  min-width: 0px !important;
}
html.simpl.inSettings .aeN {
  width: 0px !important;
  overflow: hidden;
}

/* No shadow or label on compose button */
html.simpl .z0 > .L3 {
  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3) !important;
  border-radius: 28px;
  font-size: 0;
  height: 56px;
  padding: 0;
  width: 56px;
}

/* Make FAB dark in dark themes */
html.simpl.darkTheme .z0 > .L3 {
  background-color: rgba(51, 51, 51, 0.9);
}

/* Move compose button out of menu */
html.simpl .z0 {
  position: absolute;
  left: calc(100vw - 92px);
  top: calc(100vh - 140px);
  z-index: 3 !important;
  width: 54px;
  margin: 0;
  padding: 0;
}

/* Move it over futher if RHS Chat is enabled */
html.simpl.rhsChat .z0 {
  left: calc(100vw - 275px);
}

/* Add some padding above the nav that the compose button used to provide */
html.simpl .wT {
  padding-top: 20px;
}

/* Hide top shadow when you scroll long label list */
html.simpl .aeN .ajj:before {
  -webkit-box-shadow: none;
  box-shadow: none;
}

/* Hide the compose and add-ons button when in Settings */
html.simpl.inSettings .z0,
html.simpl.inSettings .bAw {
  display: none;
}

/* Make the bottom Hangouts tabs a little less ugly */
html.simpl div[gh="gt"] {
  text-align: left;
  border-top: 0px;
  padding-left: 18px;
}
html.simpl.rhsChat div[gh="gt"] {
  text-align: right;
  border-top: 0px;
  padding-left: 0px;
}
/* ... */

